[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.21.3"}
tokio = {version = "1.26.0", features = ["full"]}
convos = { workspace = true }
logos = "0.12.1"