[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.26.0", features = ["full"]}
convos = { workspace = true }
directories = "4.0.1"
rand = "0.8.5"
sqlx = {version = "*", features = ["runtime-tokio-rustls", "postgres"]}
sha2 = "*"

# dont need tihs for now
# base64 = "*"